# backend/docs/swagger.json
@@ -5,6 +5,51 @@
     },
     "paths": {
         "/accounts": {
+            "get": {
+                "description": "ユーザが開示しているアカウント一覧を取得する",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "accounts"
+                ],
+                "summary": "アカウント一覧取得",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "パスワードを取得するユーザのID",
+                        "name": "passerID",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "成功",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/handlers.AccountResponse"
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "リクエストデータが不正です",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    },
+                    "500": {
+                        "description": "データベース接続に失敗しました",
+                        "schema": {
+                            "$ref": "#/definitions/handlers.ErrorResponse"
+                        }
+                    }
+                }
+            },
             "put": {
                 "description": "アカウントを更新する",
                 "consumes": [
@@ -138,9 +183,9 @@
                 }
             }
         },
-        "/accounts/{passerID}": {
+        "/devices": {
             "get": {
-                "description": "ユーザが開示しているアカウント一覧を取得する",
+                "description": "ユーザが開示しているデバイス一覧を取得する",
                 "consumes": [
                     "application/json"
                 ],
@@ -148,13 +193,13 @@
                     "application/json"
                 ],
                 "tags": [
-                    "accounts"
+                    "devices"
                 ],
-                "summary": "アカウント一覧取得",
+                "summary": "デバイス一覧取得",
                 "parameters": [
                     {
                         "type": "string",
-                        "description": "パスワードを取得するユーザのID",
+                        "description": "デバイスを取得するユーザのID",
                         "name": "passerID",
                         "in": "query",
                         "required": true
@@ -166,7 +211,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/handlers.AccountResponse"
+                                "$ref": "#/definitions/handlers.DeviceResponse"
                             }
                         }
                     },
@@ -183,9 +228,7 @@
                         }
                     }
                 }
-            }
-        },
-        "/devices": {
+            },
             "put": {
                 "description": "デバイスを更新する",
                 "consumes": [
@@ -302,53 +345,6 @@
                         "description": "成功",
                         "schema": {
                             "$ref": "#/definitions/handlers.DeviceResponse"
-                        }
-                    },
-                    "400": {
-                        "description": "リクエストデータが不正です",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
-                        }
-                    },
-                    "500": {
-                        "description": "データベース接続に失敗しました",
-                        "schema": {
-                            "$ref": "#/definitions/handlers.ErrorResponse"
-                        }
-                    }
-                }
-            }
-        },
-        "/devices/{passerID}": {
-            "get": {
-                "description": "ユーザが開示しているデバイス一覧を取得する",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "devices"
-                ],
-                "summary": "デバイス一覧取得",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "デバイスを取得するユーザのID",
-                        "name": "passerID",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "成功",
-                        "schema": {
-                            "type": "array",
-                            "items": {
-                                "$ref": "#/definitions/handlers.DeviceResponse"
-                            }
                         }
                     },
                     "400": {
